# lc3_vm

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/common/: Constants.h  Singleton.h  Types.h  Utils.h
src/core/: VirtualMachine.cpp  VirtualMachine.h
src/hardware/: ConditionFlagState.h  IMemoryManager.h  InstructionType.h  InstructionsSet.h  MemoryManager.cpp  MemoryManager.h  RegistersSet.h
src/instructions/: AddInstruction.h  AndInstruction.h  BitwiseAndInstruction.h  BitwiseNotInstruction.h  BranchInstruction.h  InstructionExecutor.cpp  InstructionExecutor.h  LdiInstruction.h  NopInstruction.h
src/interfaces/: IInstruction.h  IInstructionExecutor.h  IMemoryManager.h  IRegisterManager.h
src/sysmanagement/: MemoryManager.cpp  MemoryManager.h  RegisterManager.cpp  RegisterManager.h
test/: CMakeLists.txt
test/src/instructions/: TestAddInstruction.cpp
